--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -56,6 +56,22 @@ section{
     font-size: 3.5vw;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: center center;
+    
+}
+
 .normal{
     background-color: white;
     color: black;
@@ -64,17 +80,21 @@ section{
 .imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.427);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.223);
+    background-color: rgba(0, 0, 0, 0.49);
+    text-shadow: 1px 1px 0px black;
 }
 
 footer{
     background-color: black;
     text-align: center;
     color: white;
-    padding: 10px;
+    padding: 20px;
 }
